# securechain-gateway

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  template.env
.github/workflows/: github-release.yml  lint-test.yml  py-analysis.yml  release.yml
app/: config.py  constants.py  dependencies.py  logger.py  main.py  middleware.py  settings.py
app/domain/: __init__.py  openapi_manager.py  proxy_handler.py
app/utils/: __init__.py  json_encoder.py  openapi_manager.py  openapi_merge.py
dev/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/integration/: test_endpoints.py  test_openapi.py
tests/unit/: test_openapi_manager.py  test_proxy_handler.py
